# JungleBike

./: .gitignore  README.md  analyseData.ipynb  app.py  pyproject.toml  requetes.sql
classic_ml/: config.py  data.py  model.py  predict.py  train.py
evaluation/: evaluate_classic.py  evaluate_transformer.py
evaluation/evaluation_results/classic_model/: classification_report.txt
evaluation/evaluation_results/transformer_model/: classification_report.txt
models/: dataset_target_map.json  product_classifier.onnx
scripts/: export_onnx.py  predict.py  preprocess.py  train.py
src/: data_loader.py  model.py  preprocessing.py
tests/: test_data_loader.py  test_dataset.py
